--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,13 @@ GOOGLE_REFRESH_TOKEN=your_google_refresh_token_here
 #   Claude: claude-sonnet-4.5 (default), claude-sonnet-4
 #   GPT-5.1: gpt-5.1, gpt-5.1-instant
 #   GPT-5: gpt-5, gpt-5-mini, gpt-5-nano
+#   Gemini: gemini-3-pro, gemini-2.5-flash, gemini-2.5-flash-lite
 AI_MODEL=claude-sonnet-4.5
 
 # API Keys (provide at least one for your chosen model's provider)
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # Optional: Override max output tokens (defaults to model's maxOutputTokens)
 # Claude models default to 8192 (capped for safety)
