--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.68.0",
     "@google-cloud/text-to-speech": "^6.4.0",
+    "@google/generative-ai": "^0.24.1",
     "@upstash/redis": "^1.35.6",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
