fix: Add privacy route to Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,10 @@
     {
       "src": "/api/health-check",
       "dest": "/api/health-check.ts"
+    },
+    {
+      "src": "/api/privacy",
+      "dest": "/api/privacy.ts"
     }
   ]
 }
