fix: Add seed-prod route to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -26,6 +26,10 @@
     {
       "src": "/api/privacy",
       "dest": "/api/privacy.ts"
+    },
+    {
+      "src": "/api/seed-prod",
+      "dest": "/api/seed-prod.ts"
     }
   ]
 }
