fix: Use local Prisma via vercel-build instead of npx
Changed deployment strategy:
1. installCommand: just npm ci (install packages)
2. postinstall: prisma generate (runs after npm ci completes)
3. vercel-build: prisma generate && prisma migrate deploy

This uses the locally installed Prisma v5.22.0 from node_modules
instead of npx which was installing a temporary version that couldn't
find @prisma/client.

Deployment flow:
npm ci → postinstall (prisma generate) → vercel-build (migrate) → build → deploy

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "vercel-build": "npx prisma migrate deploy",
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && prisma migrate deploy",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "type-check": "tsc --noEmit",
