feat: Initialize Next.js migration with i18n and component library
Phase 1: Next.js Setup
- Install Next.js 16.1.1 with React 19 and App Router
- Configure TypeScript for Next.js (tsconfig.json)
- Setup ESLint and Prettier
- Create .env.local.example for local development
- Configure Telegram bot for polling (dev) and webhook (prod) modes
- Create custom dev script to run Next.js + bot polling concurrently
- Update .gitignore for Next.js build artifacts

Phase 2: Component Library
- Create Layout components: TelegramLayout, Header, Footer
- Create UI components: Button, Card, FormGroup, Section
- Create Form components: LanguageSelector, LocationInput, CalendarCheckbox
- Create Feedback components: LoadingButton, StatusMessage

Phase 3: i18n Setup (In Progress)
- Install and configure next-intl
- Create middleware for locale detection
- Setup [locale] routing structure
- Create comprehensive English translation file (50+ strings)
- Create comprehensive Hebrew translation file with RTL support
- Migrate dashboard page to Next.js with i18n

Remaining: Migrate admin-panel, settings, select-calendars, admin, refresh-token pages

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Family Calendar Telegram Bot with Google Calendar and Claude AI",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "vercel-build": "prisma generate && prisma migrate deploy",
-    "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js",
+    "dev": "tsx scripts/dev.ts",
+    "dev:next": "next dev",
+    "dev:bot": "tsx src/index.ts",
+    "build": "next build",
+    "start": "next start",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
     "type-check": "tsc --noEmit",
     "get-google-token": "tsx scripts/get-google-token.ts",
     "setup-webhook": "tsx scripts/setup-webhook.ts"
@@ -34,14 +36,21 @@
     "dotenv": "^17.2.3",
     "googleapis": "^164.1.0",
     "hebcal": "^2.3.2",
+    "next": "^16.1.1",
+    "next-intl": "^4.6.1",
     "node-telegram-bot-api": "^0.66.0",
     "openai": "^6.9.1",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
     "@types/node-telegram-bot-api": "^0.64.7",
     "@vercel/node": "^5.5.4",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
+    "prettier": "^3.7.4",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   },
