fix: Simplify vercel.json to prevent multiple builds
Removed custom routes that were causing Vercel to trigger
13 separate builds (8+ minutes). Letting Next.js App Router
handle all routing automatically.

Expected: Single build completing in ~30s

--- a/vercel.json
+++ b/vercel.json
@@ -1,49 +1,3 @@
 {
-  "version": 2,
-  "routes": [
-    {
-      "src": "/api/daily-summary",
-      "dest": "/api/daily-summary.ts"
-    },
-    {
-      "src": "/api/tomorrow-summary",
-      "dest": "/api/tomorrow-summary.ts"
-    },
-    {
-      "src": "/api/webhook",
-      "dest": "/api/webhook.ts"
-    },
-    {
-      "src": "/api/refresh-token",
-      "dest": "/api/refresh-token.ts"
-    },
-    {
-      "src": "/api/select-calendars",
-      "dest": "/api/select-calendars.ts"
-    },
-    {
-      "src": "/api/admin(.*)",
-      "dest": "/api/admin.ts"
-    },
-    {
-      "src": "/api/dashboard",
-      "dest": "/api/dashboard.ts"
-    },
-    {
-      "src": "/api/settings",
-      "dest": "/api/settings.ts"
-    },
-    {
-      "src": "/api/admin-panel",
-      "dest": "/api/admin-panel.ts"
-    },
-    {
-      "src": "/api/seed-users",
-      "dest": "/api/seed-users.ts"
-    },
-    {
-      "src": "/api/execute-command",
-      "dest": "/api/execute-command.ts"
-    }
-  ]
+  "buildCommand": "prisma generate && prisma migrate deploy && next build"
 }
